# devcontainer_langchain

./: .env.example  README.md  configuração.md  pyproject.toml
.Trash-1000/files/: Copia Ranking.ipynb  teste.ipynb
.Trash-1000/info/: Copia Ranking.ipynb.trashinfo  iframe_figures.trashinfo  teste.ipynb.trashinfo
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  test_tools.sh
data/sefaz-sp/2026-03-05/: df_acertos_2026-03-05_14-12.parquet  df_brancos_2026-03-05_14-12.parquet  df_erros_2026-03-05_14-12.parquet  df_percentual_2026-03-05_14-12.parquet  df_pontos_2026-03-05_14-12.parquet
infra/langflow/: docker-compose.yml
notebooks/olho_na_vaga/: analise.ipynb  teste.ipynb
notebooks/ultimas_noticias/: Últimas Noticias.ipynb
src/: __init__.py
src/longchain/: estudo_longchain.ipynb
src/olhonavaga/: __init__.py  parser.py  scraper.py
src/portal/: index.html
src/ultimasnoticias/: __init__.py  browser.py  parser.py  scraper.py  storage.py  telegram  telegram.py
testes/: noticias.py  run_noticias.ipynb  teste_noticias.ipynb
