[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pandas-stubs>=3.0.0.260204",
    "plotly>=6.6.0",
    "pyarrow>=23.0.1",
    "seaborn>=0.13.2",
    "selenium>=4.41.0",
    "stubs>=1.0.0",
    "tenacity>=9.1.4",
    "undetected-chromedriver>=3.5.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

[[tool.mypy.overrides]]
module = "undetected_chromedriver.*"
ignore_missing_imports = true
